<resources>
    <string name="app_name">FoodDeliveryApp</string>
    <string name="str_txt_login">Log in</string>
    <string name="str_btn_facebook">Continue with facebook</string>
    <string name="str_btn_createAccount">Create Account</string>
    <string name="str_txt_liveTrack">Live Tracking</string>
    <string name="str_txt_desc1">Real time tracking of your food \non the app after ordered.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_txt_cancel">Cancel</string>
    <string name="str_txt_editProfile">Edit Profile</string>
    <string name="str_txt_save">Save</string>


    <string name="intro_btn_get_started">Get Started</string>
    <string name="intro_page_title">Happy Meals</string>
    <string name="intro_page_description">Discover the best foods from over 1000 restaurants</string>
</resources>