<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IntroductionScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_marginRight="@dimen/margin_medium_3"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:text="@string/str_txt_login"
            android:textStyle="bold"
            />


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="440dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin"
            android:layout_marginTop="@dimen/margin_medium_3"
            app:layout_constraintBottom_toTopOf="@+id/indicator"/>

       <io.github.kshitij_jain.indicatorview.IndicatorView
           android:id="@+id/indicator"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toTopOf="@+id/btn_createAccount"
           android:layout_marginBottom="@dimen/margin_xxlarge"
           />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_connect_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="@dimen/margin_xxlarge"
            android:layout_marginRight="@dimen/margin_xxlarge"
            android:text="@string/str_btn_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_marginBottom="52dp"
            app:cornerRadius="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            app:cornerRadius="24dp"
            android:layout_marginLeft="@dimen/margin_xxlarge"
            android:layout_marginRight="@dimen/margin_xxlarge"
            android:layout_marginBottom="@dimen/margin_medium"
            android:backgroundTint="@android:color/holo_orange_dark"
            app:layout_constraintBottom_toTopOf="@+id/btn_connect_fb"
            android:text="@string/str_btn_createAccount"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>