<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AccountFragment">

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/margin_large"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:text="@string/str_txt_cancel"/>

    <TextView
        android:id="@+id/tvEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tvCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/str_txt_editProfile"/>

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tvCancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:layout_marginRight="@dimen/margin_large"
        android:text="@string/str_txt_save"/>

    <TextView
        android:id="@+id/tvDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCancel"
        android:layout_marginTop="@dimen/margin_large"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:src="@drawable/img_profile"/>

    <ImageView
        android:id="@+id/iv_gallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/img_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hintEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Your Email"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        android:layout_marginTop="@dimen/margin_large"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        app:layout_constraintTop_toBottomOf="@+id/tv_hintEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="20sp"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/tv_hintPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Your Password"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        android:inputType="textPassword"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:paddingLeft="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_hintPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/tv_hintPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Your Phone"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:paddingLeft="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_hintPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/tv_hintState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="City,State"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:text="Yangon"
        android:paddingLeft="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_hintState"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/tv_hintCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvState"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="Country"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_xxlarge"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:text="Myanmar"
        android:paddingLeft="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_hintCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName"
        />

</androidx.constraintlayout.widget.ConstraintLayout>